Attempt to fix iPad stretch

--- a/randoms/sample/files/style.css
+++ b/randoms/sample/files/style.css
@@ -19,7 +19,7 @@ a {
 #title {
 	height:200px; 
 	width:75%; 
-	margin-left:260px; 
+	margin-left:18%; 
 	margin-top:-40px; 
 	font-family:Source Sans Pro;
 	font-size:50px;
@@ -38,7 +38,7 @@ a {
 #contentBackground {
 	height:1570px; 
 	width:75%; 
-	margin-left:260px;
+	margin-left:18%;
 	margin-top:-100px;
 	background-color:#EBEBEB
 }
